@@ -1592,166 +1592,162 @@ class LMS
         return FALSE;
     }
 
-    public function SendMail($recipients, $headers, $body, $files = NULL, $host = null, $port = null, $user = null, $pass = null, $auth = null, $persist = null)
-    {
-	$persist = is_null($persist) ? ConfigHelper::getConfig('mail.smtp_persist', true) : $persist;
+	public function SendMail($recipients, $headers, $body, $files = NULL, $persist = null, $smtp_options = null) {
+		$persist = is_null($persist) ? ConfigHelper::getConfig('mail.smtp_persist', true) : $persist;
 
-	if(ConfigHelper::getConfig('mail.backend') == 'pear'){
-	    @include_once('Mail.php');
-	    if (!class_exists('Mail'))
-		return trans('Can\'t send message. PEAR::Mail not found!');
+		if (ConfigHelper::getConfig('mail.backend') == 'pear') {
+			@include_once('Mail.php');
+			if (!class_exists('Mail'))
+				return trans('Can\'t send message. PEAR::Mail not found!');
 
-	    if (!is_object($this->mail_object) || !$persist) {
-		$params['host'] = (!$host ? ConfigHelper::getConfig('mail.smtp_host') : $host);
-		$params['port'] = (!$port ? ConfigHelper::getConfig('mail.smtp_port') : $port);
-		$smtp_username = ConfigHelper::getConfig('mail.smtp_username');
-		if (!empty($smtp_username) || $user) {
-		    $params['auth'] = (!$auth ? ConfigHelper::getConfig('mail.smtp_auth_type', true) : $auth);
-		    $params['username'] = (!$user ? $smtp_username : $user);
-		    $params['password'] = (!$pass ? ConfigHelper::getConfig('mail.smtp_password') : $pass);
-		} else
-		    $params['auth'] = false;
-		$params['persist'] = $persist;
+			if (!is_object($this->mail_object) || !$persist) {
+				$params['host'] = (!isset($smtp_options['host']) ? ConfigHelper::getConfig('mail.smtp_host') : $smtp_options['host']);
+				$params['port'] = (!isset($smtp_options['port']) ? ConfigHelper::getConfig('mail.smtp_port') : $smtp_options['port']);
+				$smtp_username = ConfigHelper::getConfig('mail.smtp_username');
+				if (!empty($smtp_username) || isset($smtp_options['user'])) {
+					$params['auth'] = (!isset($smtp_options['auth']) ? ConfigHelper::getConfig('mail.smtp_auth_type', true) : $smtp_options['auth']);
+					$params['username'] = (!isset($smtp_options['user']) ? $smtp_username : $smtp_options['user']);
+					$params['password'] = (!isset($smtp_options['pass']) ? ConfigHelper::getConfig('mail.smtp_password') : $smtp_options['pass']);
+				} else
+					$params['auth'] = false;
+				$params['persist'] = $persist;
 
-		$error = $this->mail_object = & Mail::factory('smtp', $params);
-		//if (PEAR::isError($error))
-		if (is_a($error, 'PEAR_Error'))
-		    return $error->getMessage();
-	    }
+				$error = $this->mail_object = & Mail::factory('smtp', $params);
+				//if (PEAR::isError($error))
+				if (is_a($error, 'PEAR_Error'))
+					return $error->getMessage();
+			}
 
-	    $headers['X-Mailer'] = 'LMS-' . $this->_version;
-	    if (!empty($_SERVER['REMOTE_ADDR']))
-		$headers['X-Remote-IP'] = $_SERVER['REMOTE_ADDR'];
-	    if (isset($_SERVER['HTTP_USER_AGENT']))
-		$headers['X-HTTP-User-Agent'] = $_SERVER['HTTP_USER_AGENT'];
-	    $headers['Mime-Version'] = '1.0';
-	    $headers['Subject'] = qp_encode($headers['Subject']);
+			$headers['X-Mailer'] = 'LMS-' . $this->_version;
+			if (!empty($_SERVER['REMOTE_ADDR']))
+				$headers['X-Remote-IP'] = $_SERVER['REMOTE_ADDR'];
+			if (isset($_SERVER['HTTP_USER_AGENT']))
+				$headers['X-HTTP-User-Agent'] = $_SERVER['HTTP_USER_AGENT'];
+			$headers['Mime-Version'] = '1.0';
+			$headers['Subject'] = qp_encode($headers['Subject']);
 
-	    $debug_email = ConfigHelper::getConfig('mail.debug_email');
-	    if (!empty($debug_email)) {
-		$recipients = ConfigHelper::getConfig('mail.debug_email');
-		$headers['To'] = '<' . $recipients . '>';
-	    }
+			$debug_email = ConfigHelper::getConfig('mail.debug_email');
+			if (!empty($debug_email)) {
+				$recipients = ConfigHelper::getConfig('mail.debug_email');
+				$headers['To'] = '<' . $recipients . '>';
+			}
 
-	    if (empty($headers['Date']))
-		$headers['Date'] = date('r');
+			if (empty($headers['Date']))
+				$headers['Date'] = date('r');
 
-	    if ($files || $headers['X-LMS-Format'] == 'html') {
-		$boundary = '-LMS-' . str_replace(' ', '.', microtime());
-		$headers['Content-Type'] = "multipart/mixed;\n  boundary=\"" . $boundary . '"';
-		$buf = "\nThis is a multi-part message in MIME format.\n\n";
-		$buf .= '--' . $boundary . "\n";
-		$buf .= "Content-Type: text/" . ($headers['X-LMS-Format'] == 'html' ? "html" : "plain") . "; charset=UTF-8\n\n";
-		$buf .= $body . "\n";
-		if ($files)
-		    while (list(, $chunk) = each($files)) {
-			$buf .= '--' . $boundary . "\n";
-			$buf .= "Content-Transfer-Encoding: base64\n";
-			$buf .= "Content-Type: " . $chunk['content_type'] . "; name=\"" . $chunk['filename'] . "\"\n";
-			$buf .= "Content-Description:\n";
-			$buf .= "Content-Disposition: attachment; filename=\"" . $chunk['filename'] . "\"\n\n";
-			$buf .= chunk_split(base64_encode($chunk['data']), 60, "\n");
-		    }
-		$buf .= '--' . $boundary . '--';
-	    } else {
-		$headers['Content-Type'] = 'text/plain; charset=UTF-8';
-		$buf = $body;
-	    }
+			if ($files || $headers['X-LMS-Format'] == 'html') {
+				$boundary = '-LMS-' . str_replace(' ', '.', microtime());
+				$headers['Content-Type'] = "multipart/mixed;\n  boundary=\"" . $boundary . '"';
+				$buf = "\nThis is a multi-part message in MIME format.\n\n";
+				$buf .= '--' . $boundary . "\n";
+				$buf .= "Content-Type: text/" . ($headers['X-LMS-Format'] == 'html' ? "html" : "plain") . "; charset=UTF-8\n\n";
+				$buf .= $body . "\n";
+				if ($files)
+					while (list(, $chunk) = each($files)) {
+						$buf .= '--' . $boundary . "\n";
+						$buf .= "Content-Transfer-Encoding: base64\n";
+						$buf .= "Content-Type: " . $chunk['content_type'] . "; name=\"" . $chunk['filename'] . "\"\n";
+						$buf .= "Content-Description:\n";
+						$buf .= "Content-Disposition: attachment; filename=\"" . $chunk['filename'] . "\"\n\n";
+						$buf .= chunk_split(base64_encode($chunk['data']), 60, "\n");
+					}
+				$buf .= '--' . $boundary . '--';
+			} else {
+				$headers['Content-Type'] = 'text/plain; charset=UTF-8';
+				$buf = $body;
+			}
 
-	    $error = $this->mail_object->send($recipients, $headers, $buf);
-	    //if (PEAR::isError($error))
-	    if (is_a($error, 'PEAR_Error'))
-		return $error->getMessage();
-	    else
-		return MSG_SENT;
+			$error = $this->mail_object->send($recipients, $headers, $buf);
+			//if (PEAR::isError($error))
+			if (is_a($error, 'PEAR_Error'))
+				return $error->getMessage();
+			else
+				return MSG_SENT;
+		} elseif(ConfigHelper::getConfig('mail.backend') == 'phpmailer') {
+			$this->mail_object = new PHPMailer();
+			$this->mail_object->isSMTP();
+
+			$this->mail_object->SMTPKeepAlive = $persist;
+
+			$this->mail_object->Host = (!isset($smtp_options['host']) ? ConfigHelper::getConfig('mail.smtp_host') : $smtp_options['host']);
+			$this->mail_object->Port = (!isset($smtp_options['port']) ? ConfigHelper::getConfig('mail.smtp_port') : $smtp_options['port']);
+			$smtp_username = ConfigHelper::getConfig('mail.smtp_username');
+			if (!empty($smtp_username) || isset($smtp_options['user'])) {
+				$this->mail_object->Username = (!isset($smtp_options['user']) ? $smtp_username : $smtp_options['user']);
+				$this->mail_object->Password = (!isset($smtp_options['pass']) ? ConfigHelper::getConfig('mail.smtp_password') : $smtp_options['pass']);
+				$this->mail_object->SMTPAuth  = (!isset($smtp_options['auth']) ? ConfigHelper::getConfig('mail.smtp_auth_type', true) : $smtp_options['auth']);
+				$this->mail_object->SMTPSecure  = (!isset($smtp_options['auth']) ? ConfigHelper::getConfig('mail.smtp_secure', true) : $smtp_options['auth']);
+			}
+
+			$this->mail_object->SMTPOptions = array(
+				'ssl' => array(
+					'verify_peer' => isset($smtp_options['ssl_verify_peer']) ? $smtp_options['ssl_verify_peer'] : false,
+					'verify_peer_name' => isset($smtp_options['ssl_verify_peer_name']) ? $smtp_options['ssl_verify_peer_name'] : false,
+					'allow_self_signed' => isset($smtp_options['ssl_allow_self_signed']) ? $smtp_options['ssl_allow_self_signed'] : true,
+				)
+			);
+
+			$this->mail_object->XMailer = 'LMS-' . $this->_version;
+			if (!empty($_SERVER['REMOTE_ADDR']))
+				$this->mail_object->addCustomHeader('X-Remote-IP: '.$_SERVER['REMOTE_ADDR']);
+			if (isset($_SERVER['HTTP_USER_AGENT']))
+				$this->mail_object->addCustomHeader('X-HTTP-User-Agent: '.$_SERVER['HTTP_USER_AGENT']);
+
+			if (isset($headers['X-LMS-Message-Item-Id']))
+				$this->mail_object->addCustomHeader('X-LMS-Message-Item-Id: ' . $headers['X-LMS-Message-Item-Id']);
+
+			if (isset($headers['Disposition-Notification-To']))
+				$this->mail_object->ConfirmReadingTo = $headers['Disposition-Notification-To'];
+			elseif (isset($headers['Return-Receipt-To']))
+				$this->mail_object->ConfirmReadingTo = $headers['Return-Receipt-To'];
+
+			$this->mail_object->Dsn = isset($headers['Delivery-Status-Notification-To']);
+
+			preg_match('/^(.+) <([a-z0-9_\.-]+@[\da-z\.-]+\.[a-z\.]{2,6})>$/A', $headers['From'], $from);
+			$this->mail_object->setFrom($from[2], trim($from[1], "\""));
+			$this->mail_object->addReplyTo($headers['Reply-To']);
+			$this->mail_object->CharSet = 'UTF-8';
+			$this->mail_object->Subject = $headers['Subject'];
+
+			$debug_email = ConfigHelper::getConfig('mail.debug_email');
+			if (!empty($debug_email)) {
+				$this->mail_object->SMTPDebug = 2;
+				$recipients = ConfigHelper::getConfig('mail.debug_email');
+			}
+
+			if (empty($headers['Date']))
+				$headers['Date'] = date('r');
+
+			if ($files)
+				while (list(, $chunk) = each($files))
+					$this->mail_object->AddStringAttachment($chunk['data'],$chunk['filename'],'base64',$chunk['content_type']);
+
+			if ($headers['X-LMS-Format'] == 'html') {
+				$this->mail_object->isHTML(true);
+				$this->mail_object->AltBody = trans("To view the message, please use an HTML compatible email viewer");
+				$this->mail_object->msgHTML($body);
+			} else {
+				$this->mail_object->isHTML(false);
+				$this->mail_object->Body = $body;
+			}
+
+			foreach (explode(",", $recipients) as $recipient)
+				$this->mail_object->addAddress($recipient);
+
+			// setup your cert & key file
+			$cert = LIB_DIR . DIRECTORY_SEPARATOR . 'lms-mail.cert';
+			$key = LIB_DIR . DIRECTORY_SEPARATOR . 'lms.key';
+
+			// set email digital signature
+			if (file_exists($cert) && file_exists($key))
+				$this->mail_object->sign($cert, $key, null);
+
+			if (!$this->mail_object->Send())
+				return "Mailer Error: " . $this->mail_object->ErrorInfo;
+			else
+				return MSG_SENT;
+		}
 	}
-	elseif(ConfigHelper::getConfig('mail.backend') == 'phpmailer'){
-	    $this->mail_object = new PHPMailer();
-	    $this->mail_object->isSMTP();
-
-	    $this->mail_object->SMTPKeepAlive = $persist;
-
-	    $this->mail_object->Host = (!$host ? ConfigHelper::getConfig('mail.smtp_host') : $host);
-	    $this->mail_object->Port = (!$port ? ConfigHelper::getConfig('mail.smtp_port') : $port);
-	    $smtp_username = ConfigHelper::getConfig('mail.smtp_username');
-	    if (!empty($smtp_username) || $user) {
-		$this->mail_object->Username = (!$user ? $smtp_username : $user);
-		$this->mail_object->Password = (!$pass ? ConfigHelper::getConfig('mail.smtp_password') : $pass);
-		$this->mail_object->SMTPAuth  = (!$auth ? ConfigHelper::getConfig('mail.smtp_auth_type', true) : $auth);
-		$this->mail_object->SMTPSecure  = (!$auth ? ConfigHelper::getConfig('mail.smtp_secure', true) : $auth);
-	    }
-
-	    $this->mail_object->SMTPOptions = array(
-		'ssl' => array(
-		    'verify_peer' => false,
-		    'verify_peer_name' => false,
-		    'allow_self_signed' => true
-		)
-	    );
-
-	    $this->mail_object->XMailer = 'LMS-' . $this->_version;
-	    if (!empty($_SERVER['REMOTE_ADDR']))
-		$this->mail_object->addCustomHeader('X-Remote-IP: '.$_SERVER['REMOTE_ADDR']);
-	    if (isset($_SERVER['HTTP_USER_AGENT']))
-		$this->mail_object->addCustomHeader('X-HTTP-User-Agent: '.$_SERVER['HTTP_USER_AGENT']);
-
-		if (isset($headers['X-LMS-Message-Item-Id']))
-			$this->mail_object->addCustomHeader('X-LMS-Message-Item-Id: ' . $headers['X-LMS-Message-Item-Id']);
-
-		if (isset($headers['Disposition-Notification-To']))
-			$this->mail_object->ConfirmReadingTo = $headers['Disposition-Notification-To'];
-		elseif (isset($headers['Return-Receipt-To']))
-			$this->mail_object->ConfirmReadingTo = $headers['Return-Receipt-To'];
-
-		$this->mail_object->Dsn = isset($headers['Delivery-Status-Notification-To']);
-
-	    preg_match('/^(.+) <([a-z0-9_\.-]+@[\da-z\.-]+\.[a-z\.]{2,6})>$/A', $headers['From'], $from);
-	    $this->mail_object->setFrom($from[2], trim($from[1], "\""));
-	    $this->mail_object->addReplyTo($headers['Reply-To']);
-	    $this->mail_object->CharSet = 'UTF-8';
-	    $this->mail_object->Subject = $headers['Subject'];
-
-	    $debug_email = ConfigHelper::getConfig('mail.debug_email');
-	    if (!empty($debug_email)) {
-                $this->mail_object->SMTPDebug = 2;
-		$recipients = ConfigHelper::getConfig('mail.debug_email');
-	    }
-
-	    if (empty($headers['Date']))
-		$headers['Date'] = date('r');
-
-	    if ($files)
-	        while (list(, $chunk) = each($files))
-		    $this->mail_object->AddStringAttachment($chunk['data'],$chunk['filename'],'base64',$chunk['content_type']);
-
-	    if($headers['X-LMS-Format'] == 'html') {
-	        $this->mail_object->isHTML(true);
-	        $this->mail_object->AltBody = trans("To view the message, please use an HTML compatible email viewer");
-	        $this->mail_object->msgHTML($body);
-	    } else {
-		$this->mail_object->isHTML(false);
-		$this->mail_object->Body = $body;
-	    }
-
-	    foreach(explode(",", $recipients) as $recipient)
-	    	$this->mail_object->addAddress($recipient);
-
-	    // setup your cert & key file
-	    $cert = LIB_DIR . '/lms-mail.cert';
-	    $key = LIB_DIR . '/lms.key';
-
-	    // set email digital signature
-	    if (file_exists($cert) && file_exists($key)) {
-		$this->mail_object->sign($cert, $key, null);
-	    }
-
-	    if(!$this->mail_object->Send()) {
-		return "Mailer Error: " . $this->mail_object->ErrorInfo;
-	    } else {
-		return MSG_SENT;
-	    }
-	}
-    }
 
     public function SendSMS($number, $message, $messageid = 0, $script_service = null)
     {
@@ -3071,7 +3067,7 @@ class LMS
 					}
 
 					$res = $this->SendMail($email . ',' . $notify_email, $headers, $body,
-						$files, $smtp_host, $smtp_port, $smtp_user, $smtp_pass, $smtp_auth);
+						$files, (isset($smtp_options) ? $smtp_options : null));
 
 					if (is_string($res)) {
 						$msg = trans('Error sending mail: $a', $res);
